--- a/index.html
+++ b/index.html
@@ -3,347 +3,175 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Quran Player - Multi Reciters</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Prayer Times - Egypt</title>
   <style>
     body {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: start;
-      min-height: 100vh;
-      margin: 0;
-      font-family: sans-serif;
-      padding: 10px;
-      background-color: #f4f4f4;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #dbe6f6, #c5796d);
+      color: #2c3e50;
       text-align: center;
-      box-sizing: border-box;
+      padding: 40px;
     }
-
-    h2 {
-      font-size: 1.5em;
+    h1 {
+      font-size: 2.5em;
       margin-bottom: 10px;
     }
-
-    .controls-row {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 9px;
-      justify-content: center;
-      margin-bottom: 10px;
-      align-items: center;
+    .date-box {
+      font-size: 1.2em;
+      margin-bottom: 20px;
+      color: #fff;
+      background-color: #2c3e50;
+      padding: 10px;
+      border-radius: 10px;
+      display: inline-block;
     }
-
-    .controls-row label {
+    .countdown-box, .previous-box {
+      font-size: 1.3em;
+      color: #e74c3c;
+      margin: 10px 0;
       font-weight: bold;
-      font-size: 1em;
     }
-
-    .controls-row input,
-    .controls-row select {
-      width: 90px;
-      padding: 5px;
-      font-size: 1em;
-      border-radius: 4px;
-      border: 1px solid #888;
+    .prayer-table {
+      background: #ffffffcc;
+      margin: 0 auto;
+      padding: 20px;
+      border-radius: 15px;
+      width: 320px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
     }
-
-    .button-row {
+    .prayer-time {
       display: flex;
-      justify-content: center;
-      gap: 10px;
-      margin-bottom: 15px;
-      flex-wrap: wrap;
+      justify-content: space-between;
+      padding: 12px 0;
+      border-bottom: 1px solid #ddd;
+      font-size: 1.1em;
     }
-
-    input,
-    select,
-    button {
-      font-size: 1em;
-      padding: 10px 15px;
-      border: 1px solid #888;
-      border-radius: 5px;
-    }
-
-    button {
-      background-color: #007BFF;
-      color: white;
-      cursor: pointer;
-    }
-
-    button:disabled {
-      background-color: #ccc;
-      cursor: default;
-    }
-
-    p {
-      font-size: 1em;
-      margin: 5px 0;
-    }
-
-    audio {
-      width: 100%;
-      max-width: 500px;
-      margin-top: 10px;
-    }
-
-    img {
-      max-width: 100%;
-      height: auto;
-      border: 2px solid #444;
-      margin-top: 10px;
-      cursor: pointer;
+    .prayer-time:last-child {
+      border-bottom: none;
     }
   </style>
 </head>
 <body>
-  <h2>Quran Page Player (604 Pages) - Multi Reciters</h2>
-
-  <div class="controls-row">
-    <label for="reciter-select">Reciter:</label>
-    <select id="reciter-select">
-      <option value="khalifa">khalifa eltenijy</option>
-     <option value="naser">naser-alqattami</option>
-      <option value="hussary">AL hussary</option>
-     
-      <option value="afasy">Mishary Alafasy</option>
-      <option value="minshawi">Al-Minshawi </option>
-      <option value="mustafa">Mustafa Ismael</option>
-    </select>
-
-    <label for="start-page">Page:</label>
-    <input type="number" id="start-page" value="1" min="1" max="604" />
-
-    <label for="interval">Delay (min):</label>
-    <input type="number" id="interval" value="3" min="3" />
-
-    <label for="repeat-count">Repeats:</label>
-    <input type="number" id="repeat-count" value="1" min="1" />
+  <h1>Prayer Times - Egypt</h1>
+  <div class="date-box" id="hijriDate">Loading Hijri date...</div>
+  <div class="countdown-box" id="countdown">Calculating next prayer...</div>
+  <div class="previous-box" id="previous">Calculating time since last prayer...</div>
+  <div class="prayer-table" id="prayerTimes">
+    <p>Loading prayer times...</p>
   </div>
 
-  <div class="button-row">
-    <button onclick="startPlayer()">Start</button>
-    <button onclick="togglePause()" id="pause-btn" disabled>Pause</button>
-  </div>
+  <!-- Adhan Audio -->
+  <audio id="adhanAudio">
+    <source src="https://ia600103.us.archive.org/27/items/azan_20250517/azan.mp3" type="audio/mpeg">
+  </audio>
 
-  <p id="status">Status: Not started</p>
-  <p id="countdown">Next play in: --:--</p>
-  <p id="total-time">Total play time: 00:00:00</p>
-
-  <audio id="quran-audio" controls></audio><br />
-  <img id="page-image" alt="Quran Page" src="" />
+  <!-- Beep Sound -->
+  <audio id="beepAudio">
+    <source src="https://ia600101.us.archive.org/7/items/beep-07a/beep-07a.wav" type="audio/wav">
+  </audio>
 
   <script>
-    const audio = document.getElementById("quran-audio");
-    const status = document.getElementById("status");
-    const countdown = document.getElementById("countdown");
-    const totalTimeDisplay = document.getElementById("total-time");
-    const pageImage = document.getElementById("page-image");
-    const pauseBtn = document.getElementById("pause-btn");
-    const reciterSelect = document.getElementById("reciter-select");
+    async function loadPrayerTimes() {
+      const response = await fetch('https://api.aladhan.com/v1/timingsByCity?city=Cairo&country=Egypt&method=5');
+      const data = await response.json();
+      const times = data.data.timings;
+      const hijriDate = data.data.date.hijri;
 
-    let page = 1;
-    let intervalMinutes = 6;
-    let repeatCount = 1;
-    let currentRepeat = 0;
-    let nextPlayTimer;
-    let countdownTimer;
-    let totalTimeTimer;
-    let timeLeft = 0;
-    let isPaused = false;
-    let useAudioEndMode = false;
-    let totalSecondsPlayed = 0;
+      const hijriDisplay = `${hijriDate.weekday.ar} - ${hijriDate.day} ${hijriDate.month.ar} ${hijriDate.year} هـ`;
+      document.getElementById('hijriDate').textContent = hijriDisplay;
 
-    // Base URLs for each reciter
-    const reciters = {
-      khalifa:
-        "https://ia801807.us.archive.org/24/items/x40814xxxxxxxxxxxxx/",
-     hussary:
-        "https://ia802901.us.archive.org/16/items/Quran--alhosary-morattal-qsr-almonfasel--604-part/",
-           naser:
-        "https://ia802901.us.archive.org/16/items/604___part-quran-128kb-high-quality-604-part-by-naser-alqattami--mp3/",
-      afasy:
-        "https://ia801605.us.archive.org/3/items/quran__by--mashary-al3afasy---128-kb----604-part-full-quran-604-page--safahat-/Page",
-      minshawi:
-        "https://ia801603.us.archive.org/0/items/quran___by--alminshawi-mogawwad-192-kb----604-part-full-quran-604-page--safaha/Page",
-      mustafa:
-        "https://ia801409.us.archive.org/27/items/quran-604--part-safa7aat-quran-32kb-high-quality-604-part-by-mostafa-esma3il-m/"
-    };
+      const prayerList = ['Fajr', 'Sunrise', 'Dhuhr', 'Asr', 'Maghrib', 'Isha'];
+      const container = document.getElementById('prayerTimes');
+      container.innerHTML = '';
 
-    function setCookie(name, value, days) {
-      const d = new Date();
-      d.setTime(d.getTime() + days * 24 * 60 * 60 * 1000);
-      const expires = "expires=" + d.toUTCString();
-      document.cookie = name + "=" + value + ";" + expires + ";path=/";
-    }
+      const prayerTimes = [];
 
-    function getCookie(name) {
-      const cname = name + "=";
-      const decodedCookie = decodeURIComponent(document.cookie);
-      const ca = decodedCookie.split(";");
-      for (let c of ca) {
-        while (c.charAt(0) === " ") c = c.substring(1);
-        if (c.indexOf(cname) === 0) return c.substring(cname.length, c.length);
-      }
-      return "";
-    }
+      prayerList.forEach(prayer => {
+        const timeStr = times[prayer];
+        let [hour, minute] = timeStr.split(':').map(Number);
+        const ampm = hour >= 12 ? 'PM' : 'AM';
+        let displayHour = hour % 12;
+        displayHour = displayHour === 0 ? 12 : displayHour;
+        const displayTime = `${displayHour}:${minute.toString().padStart(2, '0')} ${ampm}`;
 
-    function savePageToCookie() {
-      setCookie("quran_page", page, 30);
-      setCookie("quran_reciter", reciterSelect.value, 30);
-    }
+        const now = new Date();
+        const prayerTime = new Date(now.getFullYear(), now.getMonth(), now.getDate(), hour, minute, 0);
+        prayerTimes.push({ name: prayer, time: prayerTime });
 
-    function loadPageFromCookie() {
-      const storedPage = parseInt(getCookie("quran_page"));
-      const storedReciter = getCookie("quran_reciter");
-      if (!isNaN(storedPage) && storedPage >= 1 && storedPage <= 604) {
-        page = storedPage;
-        document.getElementById("start-page").value = storedPage;
-      }
-      if (storedReciter && reciters.hasOwnProperty(storedReciter)) {
-        reciterSelect.value = storedReciter;
-      }
-    }
+        const row = document.createElement('div');
+        row.className = 'prayer-time';
+        row.innerHTML = `<span>${prayer}</span><span>${displayTime}</span>`;
+        container.appendChild(row);
+      });
 
-    function pad(num) {
-      return num.toString().padStart(2, "0");
-    }
+      const adhanAudio = document.getElementById('adhanAudio');
+      const beepAudio = document.getElementById('beepAudio');
+      let playedAdhan = {};
+      let playedBeep = {};
 
-    function pad3(num) {
-      return num.toString().padStart(3, "0");
-    }
+      function updateTimers() {
+        const now = new Date();
 
-    function formatTime(seconds) {
-      const h = Math.floor(seconds / 3600);
-      const m = Math.floor((seconds % 3600) / 60);
-      const s = seconds % 60;
-      return `${pad(h)}:${pad(m)}:${pad(s)}`;
-    }
+        let nextPrayer = null;
+        let prevPrayer = null;
 
-    function updateCountdown() {
-      if (!isPaused && !useAudioEndMode) {
-        if (timeLeft > 0) {
-          timeLeft--;
-        }
-        countdown.textContent = "Next play in: " + formatTime(timeLeft);
-      } else if (useAudioEndMode) {
-        countdown.textContent = "Next play after audio ends";
-      } else {
-        countdown.textContent = "--:--";
-      }
-    }
-
-    function updateTotalTime() {
-      if (!isPaused && !audio.paused) {
-        totalSecondsPlayed++;
-        totalTimeDisplay.textContent = "Total play time: " + formatTime(totalSecondsPlayed);
-      }
-    }
-
-    function playPage() {
-      const pageStr = pad3(page);
-      const reciter = reciterSelect.value;
-      let audioUrl;
-
-      if (reciter === "mustafa") {
-        audioUrl = reciters[reciter] + pageStr + ".mp3";
-      } else {
-        // For others, files are named like 001.mp3, 002.mp3 etc
-        audioUrl = reciters[reciter] + pageStr + ".mp3";
-      }
-
-      const imageUrl =
-        "https://ia801504.us.archive.org/24/items/606_20250214/" + pageStr + ".png";
-
-      audio.src = audioUrl;
-      audio.load();
-
-      if (!isPaused) {
-        audio.play();
-      }
-
-      pageImage.src = imageUrl;
-      pageImage.alt = `Quran Page ${page}`;
-      status.textContent = `Status: Playing page ${page}, repetition ${currentRepeat + 1} of ${repeatCount}, Reciter: ${reciterSelect.options[reciterSelect.selectedIndex].text}`;
-      savePageToCookie();
-
-      if (useAudioEndMode && !isPaused) {
-        audio.onended = () => {
-          currentRepeat++;
-          if (currentRepeat >= repeatCount) {
-            page = (page % 604) + 1;
-            currentRepeat = 0;
+        for (let i = 0; i < prayerTimes.length; i++) {
+          const pt = prayerTimes[i];
+          if (pt.time > now) {
+            nextPrayer = pt;
+            prevPrayer = i > 0 ? prayerTimes[i - 1] : null;
+            break;
           }
-          playPage();
-        };
-      } else if (!useAudioEndMode) {
-        currentRepeat++;
-        if (currentRepeat >= repeatCount) {
-          page = (page % 604) + 1;
-          currentRepeat = 0;
         }
-        timeLeft = intervalMinutes * 60;
+
+        if (!nextPrayer) {
+          const fajrTomorrow = new Date(prayerTimes[0].time);
+          fajrTomorrow.setDate(fajrTomorrow.getDate() + 1);
+          nextPrayer = { name: 'Fajr (next day)', time: fajrTomorrow };
+          prevPrayer = prayerTimes[prayerTimes.length - 1];
+        }
+
+        // Countdown to next
+        const diffMs = nextPrayer.time - now;
+        const minutes = Math.floor(diffMs / 60000);
+        const seconds = Math.floor((diffMs % 60000) / 1000);
+        document.getElementById('countdown').textContent =
+          `Time until ${nextPrayer.name}: ${minutes}m ${seconds}s`;
+
+        // Time since previous
+        if (prevPrayer) {
+          const diffPrev = now - prevPrayer.time;
+          const minPrev = Math.floor(diffPrev / 60000);
+          const secPrev = Math.floor((diffPrev % 60000) / 1000);
+          document.getElementById('previous').textContent =
+            `Time since ${prevPrayer.name}: ${minPrev}m ${secPrev}s`;
+        }
+
+        // Adhan + Beep logic
+        prayerTimes.forEach(pt => {
+          const keyAdhan = pt.name + pt.time.toDateString();
+          const keyBeep = pt.name + "-20min-" + pt.time.toDateString();
+          const diff = pt.time - now;
+
+          if (Math.abs(diff) < 1000 && !playedAdhan[keyAdhan]) {
+            adhanAudio.play();
+            playedAdhan[keyAdhan] = true;
+          }
+
+          if (Math.abs(diff - 20 * 60 * 1000) < 1000 && !playedBeep[keyBeep]) {
+            beepAudio.play();
+            alert("Time left to next prayer: 20 minutes");
+            playedBeep[keyBeep] = true;
+          }
+        });
       }
+
+      updateTimers();
+      setInterval(updateTimers, 1000);
     }
 
-    function startPlayer() {
-      clearInterval(nextPlayTimer);
-      clearInterval(countdownTimer);
-      clearInterval(totalTimeTimer);
-      audio.onended = null;
-
-      page = parseInt(document.getElementById("start-page").value) || 1;
-      intervalMinutes = parseInt(document.getElementById("interval").value) || 6;
-      repeatCount = parseInt(document.getElementById("repeat-count").value) || 1;
-      currentRepeat = 0;
-      isPaused = false;
-      pauseBtn.disabled = false;
-      pauseBtn.textContent = "Pause";
-      useAudioEndMode = intervalMinutes === 3;
-
-      playPage();
-
-      countdownTimer = setInterval(updateCountdown, 1000);
-      totalTimeTimer = setInterval(updateTotalTime, 1000);
-
-      if (!useAudioEndMode) {
-        timeLeft = intervalMinutes * 60;
-        nextPlayTimer = setInterval(playPage, intervalMinutes * 60 * 1000);
-      }
-    }
-
-    function togglePause() {
-      isPaused = !isPaused;
-      pauseBtn.textContent = isPaused ? "Resume" : "Pause";
-
-      if (isPaused) {
-        audio.pause();
-      } else {
-        audio.play();
-      }
-    }
-
-    pageImage.addEventListener("mousedown", (e) => {
-      if (!isPaused) return;
-      e.preventDefault();
-
-      if (e.button === 0) {
-        // left click => next page
-        page = (page % 604) + 1;
-      } else if (e.button === 2) {
-        // right click => previous page
-        page = (page - 2 + 604) % 604 + 1;
-      }
-
-      currentRepeat = 0;
-      playPage();
-    });
-
-    pageImage.addEventListener("contextmenu", (e) => e.preventDefault());
-
-    window.onload = function () {
-      loadPageFromCookie();
-    };
+    loadPrayerTimes();
   </script>
 </body>
 </html>
