--- a/index.html
+++ b/index.html
@@ -1,177 +1,104 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Prayer Times - Egypt</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to right, #dbe6f6, #c5796d);
-      color: #2c3e50;
-      text-align: center;
-      padding: 40px;
-    }
-    h1 {
-      font-size: 2.5em;
-      margin-bottom: 10px;
-    }
-    .date-box {
-      font-size: 1.2em;
-      margin-bottom: 20px;
-      color: #fff;
-      background-color: #2c3e50;
-      padding: 10px;
-      border-radius: 10px;
-      display: inline-block;
-    }
-    .countdown-box, .previous-box {
-      font-size: 1.3em;
-      color: #e74c3c;
-      margin: 10px 0;
-      font-weight: bold;
-    }
-    .prayer-table {
-      background: #ffffffcc;
-      margin: 0 auto;
-      padding: 20px;
-      border-radius: 15px;
-      width: 320px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-    }
-    .prayer-time {
-      display: flex;
-      justify-content: space-between;
-      padding: 12px 0;
-      border-bottom: 1px solid #ddd;
-      font-size: 1.1em;
-    }
-    .prayer-time:last-child {
-      border-bottom: none;
-    }
-  </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>مواقيت الصلاة في مصر + تنبيهات قبل الصلاة</title>
+<style>
+:root{--bg:#0f172a;--card:#111827ee;--muted:#94a3b8;--text:#e5e7eb;--accent:#22d3ee;--accent2:#a78bfa;--radius:20px}
+*{box-sizing:border-box}
+body{margin:0;font-family:"Tajawal",system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial;background:radial-gradient(1200px 600px at 100% -10%,#1e293b 0%,#0b1020 60%,#070b16 100%);color:var(--text);min-height:100dvh;display:grid;place-items:start center;padding:24px}
+header{width:100%;max-width:1100px;margin:0 auto 16px auto}
+.card{width:100%;max-width:1100px;background:linear-gradient(180deg,#0b1224aa,#0b122480);backdrop-filter:blur(8px);border:1px solid #1f2937;border-radius:var(--radius);box-shadow:0 10px 30px #0008;padding:20px;margin:auto}
+h1{margin:0 0 8px;font-weight:800;letter-spacing:.3px}
+.sub{color:var(--muted);font-size:14px}
+.grid{display:grid;gap:14px;grid-template-columns:repeat(1,minmax(0,1fr))}
+@media(min-width:700px){.grid{grid-template-columns:1fr 1fr 1fr 1fr}}
+label{font-size:14px;color:var(--muted)}
+input,select{width:100%;background:#0b1224;color:var(--text);border:1px solid #263044;border-radius:12px;padding:10px 12px;outline:none}
+table{width:100%;border-collapse:separate;border-spacing:0;overflow:hidden;border-radius:16px}
+thead th{background:#101827;color:#cbd5e1;font-weight:700;padding:12px;border-bottom:1px solid #1f2937;text-align:center}
+tbody td{padding:12px;border-bottom:1px dashed #1f2937;text-align:center}
+tbody tr:last-child td{border-bottom:none}
+.pill{display:inline-block;padding:2px 10px;border-radius:999px;background:#0b1224;border:1px solid #263044;color:#cbd5e1;font-size:12px}
+.accent{color:var(--accent)}
+.accent2{color:var(--accent2)}
+.muted{color:var(--muted)}
+.badge{font-size:11px;padding:2px 8px;border-radius:999px;background:#1e293b;border:1px solid #334155;color:#cbd5e1}
+footer{color:#64748b;font-size:12px;margin-top:14px}
+.note{font-size:12px;color:#93c5fd}
+.loading{font-size:13px;color:#a3e635}
+.error{font-size:13px;color:#fca5a5}
+#countdown,#countup{margin-top:14px;font-size:16px;font-weight:600;text-align:center}
+#countdown{color:#22d3ee}#countup{color:#a78bfa}
+</style>
 </head>
 <body>
-  <h1>Prayer Times - Egypt</h1>
-  <div class="date-box" id="hijriDate">Loading Hijri date...</div>
-  <div class="countdown-box" id="countdown">Calculating next prayer...</div>
-  <div class="previous-box" id="previous">Calculating time since last prayer...</div>
-  <div class="prayer-table" id="prayerTimes">
-    <p>Loading prayer times...</p>
-  </div>
+<header>
+<h1>مواقيت الصلاة – <span class="accent" id="cityTitle">القاهرة</span></h1>
+<div class="sub">مع حساب الأوقات قبل كل صلاة بـ <span class="accent2">45</span> و <span class="accent2">30</span> و <span class="accent2">15</span> دقيقة</div>
+</header>
 
-  <!-- Adhan Audio -->
-  <audio id="adhanAudio">
-    <source src="https://ia600103.us.archive.org/27/items/azan_20250517/azan.mp3" type="audio/mpeg">
-  </audio>
 
-  <!-- Beep Sound -->
-  <audio id="beepAudio">
-    <source src="https://ia600101.us.archive.org/7/items/beep-07a/beep-07a.wav" type="audio/wav">
-  </audio>
+<section class="card">
+<div class="grid" style="margin-bottom:14px">
+<div>
+<label>المحافظة</label>
+<select id="city">
+<option value="Cairo">القاهرة</option>
+<option value="Giza">الجيزة</option>
+<option value="Alexandria">الإسكندرية</option>
+<option value="Port Said">بورسعيد</option>
+<option value="Suez">السويس</option>
+<option value="Damietta">دمياط</option>
+<option value="Dakahlia">الدقهلية</option>
+<option value="Sharqia">الشرقية</option>
+<option value="Qalyubia">القليوبية</option>
+<option value="Kafr El Sheikh">كفر الشيخ</option>
+<option value="Gharbia">الغربية</option>
+<option value="Monufia">المنوفية</option>
+<option value="Beheira">البحيرة</option>
+<option value="Ismailia">الإسماعيلية</option>
+<option value="Beni Suef">بني سويف</option>
+<option value="Faiyum">الفيوم</option>
+<option value="Minya">المنيا</option>
+<option value="Asyut">أسيوط</option>
+<option value="Sohag">سوهاج</option>
+<option value="Qena">قنا</option>
+<option value="Luxor">الأقصر</option>
+<option value="Aswan">أسوان</option>
+<option value="Red Sea">البحر الأحمر</option>
+<option value="New Valley">الوادي الجديد</option>
+<option value="Matrouh">مطروح</option>
+<option value="North Sinai">شمال سيناء</option>
+<option value="South Sinai">جنوب سيناء</option>
+</select>
+</div>
+<div>
+<label>التاريخ</label>
+<input type="date" id="dateInput" />
+</div>
+<div>
+<label>طريقة الحساب</label>
+<select id="method">
+<option value="5">الهيئة العامة المصرية للمساحة (Egypt)</option>
+<option value="3">الجمعية الإسلامية لأمريكا الشمالية (ISNA)</option>
+<option value="2">رابطة العالم الإسلامي (MWL)</option>
+<option value="4">جامعة أم القرى (Makkah)</option>
+<option value="1">جامعة العلوم الإسلامية – كراتشي (Karachi)</option>
+<option value="7">معهد الجيوفيزياء – طهران (Tehran)</option>
+<option value="0">الجعفري (Jafari)</option>
+</select>
+</div>
+<div>
+<label>تنسيق الساعة</label>
+<select id="clock">
+<option value="24h">٢٤ ساعة</option>
+<option value="12h">١٢ ساعة</option>
+</select>
+</div>
+</div>
 
-  <script>
-    async function loadPrayerTimes() {
-      const response = await fetch('https://api.aladhan.com/v1/timingsByCity?city=Cairo&country=Egypt&method=5');
-      const data = await response.json();
-      const times = data.data.timings;
-      const hijriDate = data.data.date.hijri;
 
-      const hijriDisplay = `${hijriDate.weekday.ar} - ${hijriDate.day} ${hijriDate.month.ar} ${hijriDate.year} هـ`;
-      document.getElementById('hijriDate').textContent = hijriDisplay;
-
-      const prayerList = ['Fajr', 'Sunrise', 'Dhuhr', 'Asr', 'Maghrib', 'Isha'];
-      const container = document.getElementById('prayerTimes');
-      container.innerHTML = '';
-
-      const prayerTimes = [];
-
-      prayerList.forEach(prayer => {
-        const timeStr = times[prayer];
-        let [hour, minute] = timeStr.split(':').map(Number);
-        const ampm = hour >= 12 ? 'PM' : 'AM';
-        let displayHour = hour % 12;
-        displayHour = displayHour === 0 ? 12 : displayHour;
-        const displayTime = `${displayHour}:${minute.toString().padStart(2, '0')} ${ampm}`;
-
-        const now = new Date();
-        const prayerTime = new Date(now.getFullYear(), now.getMonth(), now.getDate(), hour, minute, 0);
-        prayerTimes.push({ name: prayer, time: prayerTime });
-
-        const row = document.createElement('div');
-        row.className = 'prayer-time';
-        row.innerHTML = `<span>${prayer}</span><span>${displayTime}</span>`;
-        container.appendChild(row);
-      });
-
-      const adhanAudio = document.getElementById('adhanAudio');
-      const beepAudio = document.getElementById('beepAudio');
-      let playedAdhan = {};
-      let playedBeep = {};
-
-      function updateTimers() {
-        const now = new Date();
-
-        let nextPrayer = null;
-        let prevPrayer = null;
-
-        for (let i = 0; i < prayerTimes.length; i++) {
-          const pt = prayerTimes[i];
-          if (pt.time > now) {
-            nextPrayer = pt;
-            prevPrayer = i > 0 ? prayerTimes[i - 1] : null;
-            break;
-          }
-        }
-
-        if (!nextPrayer) {
-          const fajrTomorrow = new Date(prayerTimes[0].time);
-          fajrTomorrow.setDate(fajrTomorrow.getDate() + 1);
-          nextPrayer = { name: 'Fajr (next day)', time: fajrTomorrow };
-          prevPrayer = prayerTimes[prayerTimes.length - 1];
-        }
-
-        // Countdown to next
-        const diffMs = nextPrayer.time - now;
-        const minutes = Math.floor(diffMs / 60000);
-        const seconds = Math.floor((diffMs % 60000) / 1000);
-        document.getElementById('countdown').textContent =
-          `Time until ${nextPrayer.name}: ${minutes}m ${seconds}s`;
-
-        // Time since previous
-        if (prevPrayer) {
-          const diffPrev = now - prevPrayer.time;
-          const minPrev = Math.floor(diffPrev / 60000);
-          const secPrev = Math.floor((diffPrev % 60000) / 1000);
-          document.getElementById('previous').textContent =
-            `Time since ${prevPrayer.name}: ${minPrev}m ${secPrev}s`;
-        }
-
-        // Adhan + Beep logic
-        prayerTimes.forEach(pt => {
-          const keyAdhan = pt.name + pt.time.toDateString();
-          const keyBeep = pt.name + "-20min-" + pt.time.toDateString();
-          const diff = pt.time - now;
-
-          if (Math.abs(diff) < 1000 && !playedAdhan[keyAdhan]) {
-            adhanAudio.play();
-            playedAdhan[keyAdhan] = true;
-          }
-
-          if (Math.abs(diff - 20 * 60 * 1000) < 1000 && !playedBeep[keyBeep]) {
-            beepAudio.play();
-            alert("Time left to next prayer: 20 minutes");
-            playedBeep[keyBeep] = true;
-          }
-        });
-      }
-
-      updateTimers();
-      setInterval(updateTimers, 1000);
-    }
-
-    loadPrayerTimes();
-  </script>
-</body>
+<div style="margin:6px 0 14px" class="note">يتم جلب المواقيت مباشرة من خدمة <span class="pill">AlAdhan API</span>.</div>
 </html>
