--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
     </div>
     <footer id="info"></footer>
     <div id="hijriDate" class="note" style="margin-top:8px; font-size:14px; color:#facc15"></div>
+    <a href="https://quran-11.github.io/mp3/">Quran site</a>
   </section>
 
   <script>
@@ -332,6 +333,7 @@
 </script>
 </body>
 </html>
+
 
 
 
