--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>مواقيت الصلاة في مصر + تنبيهات قبل الصلاة</title>
+  <title>مواقيت الصلاة في مصر + إذاعة القرآن الكريم</title>
 <style>
     :root{--bg:#0f172a;--card:#111827ee;--muted:#94a3b8;--text:#e5e7eb;--accent:#22d3ee;--accent2:#a78bfa;--radius:20px}
     *{box-sizing:border-box}
